--- a/src/components/MainImage.css
+++ b/src/components/MainImage.css
@@ -62,3 +62,18 @@
     } 
 }
 
+@media all and (max-width:450px){
+    .main-image-cnt{
+        padding: 0em 0em;
+    }
+
+    .main-image{
+        height: 230px;
+
+    }
+    .main-image__img{
+        height: 230px;
+    } 
+}
+
+
