--- a/src/pages/Favorites.css
+++ b/src/pages/Favorites.css
@@ -1,5 +1,6 @@
 .favorites{
     margin-top: 6em;
+    margin-bottom: 6em;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -10,9 +11,37 @@
     width:90%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
-.content__table{
+.content__table-cnt{
+    min-width: 310px;
+    max-width: 1100px;
+}
 
+.content__table{
+    color:white;
+    padding: 0em 2em;
+    background-color: rgb(197, 204, 204);
+}
+
+.content__table p{
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0em 1.3em;
+}
+
+.content__table img{
+    box-shadow: 0 2px 8px rgba(0,0,0,.3);
+}
+
+.table__button-del{
+    font-size: 17px;
+    font-weight: 600;
+    padding: .7em 1.4em;
+}
+
+.favMovie-table-img{
+    max-width: 120px;
 }
