--- a/src/pages/Favorites.css
+++ b/src/pages/Favorites.css
@@ -23,10 +23,18 @@
 .content__table{
     color:white;
     padding: 0em 2em;
-    background-color: rgb(197, 204, 204);
+    background-color: rgb(27, 27, 27);
 }
 
 .content__table p{
+    color:white;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0em 1.3em;
+}
+
+.content__table a{
+    color:white;
     font-size: 18px;
     font-weight: 600;
     margin: 0em 1.3em;
@@ -37,6 +45,7 @@
 }
 
 .table__button-del{
+    cursor: pointer;
     font-size: 17px;
     font-weight: 600;
     padding: .7em 1.4em;
