--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -49,15 +49,16 @@
   cursor: pointer;
   padding: .6em 1.2em;
   font-size: 17px;
-  color:rgb(136, 136, 136);
+  color: rgb(26, 26, 26);
   background-color: white;
-  border:2px solid rgb(136, 136, 136);
+  border:2px solid  rgb(26, 26, 26);
   transition: .3s;
 }
 
 .landing-page__load-more button:hover{
-  color:rgb(113, 195, 233);
-  border:2px solid rgb(113, 195, 233);
+  color:white;
+  border:2px solid  rgb(26, 26, 26);
+  background-color:  rgb(26, 26, 26);
   transition: .3s;
 }
 
