--- a/src/pages/SingleMovie.css
+++ b/src/pages/SingleMovie.css
@@ -27,26 +27,33 @@
 
 .single-movie__add-fav button{
     display: flex;
+    padding: 1em;
     align-items: center;
     cursor: pointer;
-    padding: .6em 1em;
     font-size: 17px;
-    color:rgb(136, 136, 136);
+    color: rgb(26, 26, 26);
     background-color: white;
-    border:2px solid rgb(136, 136, 136);
+    border:2px solid  rgb(26, 26, 26);
     transition: .3s;
   }
 
-  .single-movie__add-fav button a{
+  .single-movie__add-fav a{
       text-decoration: none;
-      color:rgb(136, 136, 136);
+      color: rgb(26, 26, 26);
   }
   
 .single-movie__add-fav button:hover{
-    color:rgb(113, 195, 233);
-    border:2px solid rgb(113, 195, 233);
+    color:white;
+    border:2px solid  rgb(26, 26, 26);
+    background-color:  rgb(26, 26, 26);
     transition: .3s;
   }
+ 
+.single-movie__add-fav button a:hover{
+    text-decoration: none;
+    color: white;
+}
+
 
 .add-fav__btn{
     margin-left: .3em;
