--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+
 }
 
 .app{
