--- a/src/pages/SingleMovie.css
+++ b/src/pages/SingleMovie.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    background-color: rgb(46, 46, 46);
+    background-color: rgb(26, 26, 26);
 }
 
 .single-movie{
@@ -89,6 +89,29 @@
     margin:.4em 0em;
 }
 
+.desc__avg-rating{
+    flex-direction: row;
+    width: fit-content;
+    color:white;
+    box-shadow: 0 2px 8px rgba(0,0,0,.3);
+    padding:.1em .7em .1em .4em;
+    background-color: rgb(26, 26, 26);
+}
+
+.desc__avg-rating p{
+   display: flex;
+   align-items: center;
+}
+
+.avg-rating__icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.3em;
+    height: 2.3em;
+    margin-left: .3em;
+}
+
 @media all and (max-width:768px){
 
     .single-movie__full-description{
@@ -128,5 +151,6 @@
         display: block;
         width: 85%;
         box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+        
     }
 }
