--- a/src/pages/SingleMovie.css
+++ b/src/pages/SingleMovie.css
@@ -1,6 +1,6 @@
 .single-movie__main-image{
-    margin-bottom: 7em;
-    margin-top:6em;
+    margin-bottom: 4em;
+    margin-top:5em;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -16,7 +16,7 @@
 
 .single-movie__add-fav{
     padding: 2em;
-    border-bottom: 2px solid lightgray;
+    border-bottom: 1px solid lightgray;
     display: flex;
     width: 90%;
 }
@@ -122,7 +122,15 @@
         margin-top:3em;
         margin-bottom: 10em;
     }
-    
+
+    .single-movie__add-fav{
+        flex-direction: column;
+    }
+
+    .single-movie__add-fav h1{
+        margin-bottom: 2em;
+    }
+
     .full-description__img{
         width:100%;
         padding-left:2em;
@@ -151,6 +159,7 @@
         display: block;
         width: 85%;
         box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-        
     }
+
+   
 }
