--- a/src/components/SingleMovieCrew.css
+++ b/src/components/SingleMovieCrew.css
@@ -1,4 +1,4 @@
-.single-movie-cast{
+.single-movie-crew{
     margin-bottom: 5em;
     width:100%;
     display: flex;
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.single-movie-cast button{
+.single-movie-crew button{
     display: flex;
     padding: .4em;
     margin-top: 3em;
@@ -20,18 +20,18 @@
     transition: .3s;
 }
 
-.single-movie-cast button:hover{
+.single-movie-crew button:hover{
     color:white;
     border:2px solid  rgb(26, 26, 26);
     background-color:  rgb(26, 26, 26);
     transition: .3s;    
 }
 
-.single-movie-cast.hide{
+.single-movie-crew.hide{
     display: none;
 }
 
-.movie-cast__toggle-btn{
+.movie-crew__toggle-btn{
     display: flex;
     padding: .6em;
     margin-bottom: 3em;
@@ -44,14 +44,14 @@
     transition: .3s;
   }
 
-.movie-cast__toggle-btn:hover{
+.movie-crew__toggle-btn:hover{
     color:white;
     border:2px solid  rgb(26, 26, 26);
     background-color:  rgb(26, 26, 26);
     transition: .3s;    
 }
 
-.movie-cast__content{
+.movie-crew__content{
     margin-top: 0em;
     width:90%;
     display: flex;
