--- a/src/layouts/Navbar.css
+++ b/src/layouts/Navbar.css
@@ -13,6 +13,7 @@
 }
 
 .navbar__hamburger{
+    cursor: pointer;
     display: none;
     position: absolute;
     right: 5%;
@@ -88,5 +89,86 @@
 
     .search-bar{
         display: none;
+    }
+}
+
+
+.sidedrawer{
+    display: none;
+}
+
+.sidedrawer__search-bar-cnt{
+    width:100%;
+    display: flex;
+    justify-content: center;
+}
+
+@media all and (max-width:768px){
+
+    .search-bar{
+        display: block;
+    }
+    
+    .sidedrawer{
+        display: flex;
+        flex-direction: column;
+        width:320px;
+        height: 100vh;
+        background-color: rgb(26, 26, 26);
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: 200;
+        transform: translateX(-100%);
+        transition: all 0.3s ease-out;
+    }
+
+    .sidedrawer.show{
+        transform: translateX(0%);
+        transition: all 0.3s ease-out;
+    }
+
+    .sidedrawer__links{
+        width:100%;
+        margin-top: 10em;
+    }
+
+    .sidedrawer__links > li:first-child{
+        border-top:1px solid rgb(58, 58, 58);;
+    }
+
+    .sidedrawer__links > li > a{
+        text-decoration: none;
+        border-bottom: 1px solid rgb(58, 58, 58);
+        display:flex;
+        font-weight: 600;
+        color:white;
+        justify-content: center;
+        align-items: center;
+        height:4em;
+        width:100%;
+    } 
+
+    .sidedrawer__links__heart{
+        color:rgb(221, 148, 148);
+        margin-left:.3em;
+    } 
+}
+
+@media all and (max-width:768px) {
+    .backdrop{
+        width:100%;
+        height: 100vh;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 100;
+        position: fixed;
+        top:0;
+        left:0;
+    }
+}
+
+@media all and (max-width:400px) {
+    .sidedrawer{
+        width:82%;  
     }
 }
