--- a/client/src/layouts/navbar/Navbar.css
+++ b/client/src/layouts/navbar/Navbar.css
@@ -12,8 +12,8 @@
 .navbar__logo {
   color: white;
   position: relative;
-  width: 9em;
-  margin-left: 3em;
+  width: 8em;
+  margin-left: 2em;
 }
 
 .navbar__hamburger {
@@ -30,7 +30,6 @@
 }
 
 .navbar__links {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,19 +63,47 @@
   padding: 1.8em 1.4em;
 }
 
-.navbar .links__search-bar-cnt {
-  margin-right: 65%;
-  margin-left: 2em;
+.navbar__links-login {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.navbar__links-login li {
+  list-style: none;
+  -webkit-transition: .25s;
+  transition: .25s;
+}
+
+.navbar__links-login li:hover {
+  background-color: #3a3a3a;
+}
+
+.navbar__links-login li a {
+  min-width: 100px;
+  border-left: 1px solid #3a3a3a;
+  display: block;
+  color: white;
+  padding: 1.8em 1.4em;
+  text-decoration: none;
+}
+
+.navbar .links__search-bar-cnt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.navbar .links__search-bar-cnt .search-bar {
+  margin-left: 1.5em;
 }
 
 .navbar .links__search-bar-cnt.hide {
   display: none;
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 950px) {
   .navbar {
     padding: .5em 0em;
   }
@@ -87,6 +114,9 @@
     margin-left: 2em;
   }
   .navbar__links {
+    display: none;
+  }
+  .navbar__links-login {
     display: none;
   }
   .navbar__hamburger {
@@ -120,7 +150,7 @@
           justify-content: center;
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 950px) {
   .search-bar {
     display: block;
   }
@@ -180,7 +210,7 @@
   }
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 950px) {
   .backdrop {
     width: 100%;
     height: 100vh;
