--- a/client/src/layouts/navbar/Navbar.scss
+++ b/client/src/layouts/navbar/Navbar.scss
@@ -3,12 +3,12 @@
     border-bottom: 1px solid rgb(58, 58, 58);
     display: flex;
     align-items: center;
-    
+
     &__logo{
         color:white;
         position: relative;
-        width: 9em;
-        margin-left:3em;
+        width: 8em;
+        margin-left:2em;
     }
     
     &__hamburger{
@@ -25,7 +25,6 @@
     }
     
     &__links{
-        width: 100%;
         display: flex;
         flex-direction: row;
         list-style: none;
@@ -54,13 +53,38 @@
             padding:1.8em 1.4em;
             
         }
-        
     }
+
+    &__links-login{
+        display: flex;
+
+        li{
+            list-style: none;
+            transition: .25s;
+
+            &:hover{
+                background-color: rgb(58,58,58);
+            }
+
+            a{
+                min-width: 100px;
+                border-left: 1px solid rgb(58, 58, 58);
+                display: block;
+                color:white;
+                padding:1.8em 1.4em;
+                text-decoration: none;
+            }
+        }
+    }
+
     
     .links__search-bar-cnt{
-        margin-right:65%;
-        margin-left: 2em;
         display: flex;
+        width:100%;
+
+        .search-bar{
+            margin-left:1.5em
+        }
     }
     
     .links__search-bar-cnt.hide{
@@ -70,7 +94,7 @@
 }
 
 
-@media all and (max-width: 768px){
+@media all and (max-width: 950px){
 
     .navbar{
         padding: .5em 0em;
@@ -83,6 +107,10 @@
         }
     
         &__links{
+            display: none;
+        }
+
+        &__links-login{
             display: none;
         }
     
@@ -119,7 +147,7 @@
 }
 
 
-@media all and (max-width:768px){
+@media all and (max-width:950px){
 
     .search-bar{
         display: block;
@@ -172,7 +200,7 @@
     } 
 }
 
-@media all and (max-width:768px) {
+@media all and (max-width:950px) {
     .backdrop{
         width:100%;
         height: 100vh;
